docs/assets/custom.css
li a[href="/"],
li a[href="/es"],
li a[href="/ja"],
li a[href="/pt"],
li a[href="/zh-Hant"],
li a[href="/zh-Hans"] {
  @apply -ml-2 mb-2 text-gray-500 uppercase tracking-wider font-bold text-sm;

  @screen lg {
     @apply text-xs;
  }
}

aside > div > ul {
  @screen lg {
    padding-left: 0.5rem !important;
  }
}

.prose pre code::after {
  @apply absolute;
}

.prose img[src*="img.shields.io"] {
  display: inline !important;
}
.tabs-component {
  margin: 4em 0;
}

.tabs-component-tabs {
  z-index: 10;
  border: solid 1px #ddd;
  border-radius: 6px;
  margin-bottom: 0 !important;
  margin-top: 0;
}

@media (min-width: 700px) {
  .tabs-component-tabs {
    border: 0;
    align-items: stretch;
    display: flex;
    justify-content: flex-start;
    margin-bottom: -1px;
  }
}

.tabs-component-tab {
  color: #999 !important;
  font-size: 14px;
  font-weight: 600;
  padding-left: 0 !important;
  margin-right: 0;
  margin-top: 0 !important;
  margin-bottom: 0 !important;
  list-style: none;

}
.tabs-component-tab::before {
  display: none;
}

.tabs-component-tab:not(:last-child) {
  border-bottom: dotted 1px #ddd;
}

.tabs-component-tab:hover {
  color: #666 !important;
}

.tabs-component-tab.is-active {
  color: #000 !important;
}

.tabs-component-tab.is-disabled * {
  color: #cdcdcd !important;
  cursor: not-allowed !important;
}

@media (min-width: 700px) {
  .tabs-component-tab {
    background-color: #fff;
    border: solid 1px #ddd;
    border-radius: 3px 3px 0 0;
    margin-right: .5em;
    transform: translateY(-3px);
    transition: transform .3s ease;
  }

  .tabs-component-tab.is-active {
    border-bottom: solid 1px #fff;
    z-index: 2;
    transform: translateY(0);
  }
}

.tabs-component-tab-a {
  align-items: center;
  color: inherit !important;
  text-decoration: none !important;
  display: flex;
  padding: .75em 1em;
  text-decoration: none;
}

.tabs-component-panels {
  margin-top: -3px;
  padding: 4em 0;
  z-index: 1
}

@media (min-width: 700px) {
  .tabs-component-panels {
    border-top-left-radius: 0;
    background-color: #fff;
    border: solid 1px #ddd;
    border-radius: 0 6px 6px 6px;
    box-shadow: 0 0 10px rgba(0, 0, 0, .05);
    padding: 4em 2em;
  }
}

